<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for the mima_counterbalance_sensors robot system</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <depend>inductive_sensor</depend>
  <depend>luxonis_cam_pipeline</depend>
  <depend>threat_detector</depend>
  <depend>pull_wire_encoder</depend>
  <depend>turn_assist</depend>
  <depend>vanjee_lidar_msg</depend>
  <depend>threat_detector_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
