[metadata]
name = threat_detector
version = 0.0.0

[options]
# Directories that contain the actual Python packages
packages = find:
# Add other packages to this list if needed
# install_requires =
#   package1
#   package2
zip_safe = True

[options.entry_points]
# console_scripts =
#   threat_detector = threat_detector.threat_detection_node:main

[develop]
script_dir=$base/lib/threat_detector

[install]
install_scripts=$base/lib/threat_detector